@@ -203,6 +203,15 @@ ibis::index* ibis::index::create(const ibis::column* c, const char* dfname,
     ibis::horometer timer;
     if (ibis::gVerbose > 1)
 	timer.start();
+    std::string evt = "index::create";
+    if (ibis::gVerbose > 0) {
+        evt += '(';
+        evt += c->partition()->name();
+        evt += '.';
+        evt += c->name();
+        evt += ')';
+    }
+
     try {
 	if (dfname != 0 && *dfname != 0) { // first attempt to read the index
 	    ibis::fileManager::storage* st=0;
@@ -242,7 +251,7 @@ ibis::index* ibis::index::create(const ibis::column* c, const char* dfname,
 			(file.c_str(), &st, prf);
 		    if (ierr != 0) {
 			LOGGER(ibis::gVerbose > 7)
-			    << "index::create tryGetFile(" << file
+			    << evt << " tryGetFile(" << file
 			    << ") failed with return code " << ierr;
 			st = 0;
 		    }
@@ -284,12 +293,20 @@ ibis::index* ibis::index::create(const ibis::column* c, const char* dfname,
 
 	    if (header) { // reconstruct index from st
 		isRead = true;
+                ibis::horometer tm4;
+                if (ibis::gVerbose > 2)
+                    tm4.start();
 		ind = readOld(c, file.c_str(), st,
 			      static_cast<INDEX_TYPE>(header[5]));
 		if (ind == 0) {
 		    ibis::fileManager::instance().flushFile(file.c_str());
 		    (void) remove(file.c_str());
 		}
+                else if (ibis::gVerbose > 2) {
+                    tm4.stop();
+                    LOGGER(1) << evt << " reading the existing index took "
+                              << tm4.realTime() << " sec";
+                }
 	    }
 	} // if (dfname != 0 && *dfname != 0)
 	if (dfname == 0) {
@@ -299,34 +316,50 @@ ibis::index* ibis::index::create(const ibis::column* c, const char* dfname,
 
 	if (ind == 0) {
 	    isRead = false;
+            ibis::horometer tm3;
+            if (ibis::gVerbose > 2)
+                tm3.start();
 	    ind = buildNew(c, dfname, spec);
+            if (ind != 0 && ibis::gVerbose > 2) {
+                tm3.stop();
+                LOGGER(1) << evt << " building a new index took "
+                          << tm3.realTime() << " sec";
+            }
 	}
 	if (ind == 0) {
 	    LOGGER(ibis::gVerbose > 0)
-		<< "index::create failed to create an index for "
-		<< c->name();
+		<< evt << " failed to create an index for " << c->name();
 	}
 	else if (ind->getNRows() == 0) {
 	    delete ind;
 	    ind = 0;
 	    LOGGER(ibis::gVerbose > 0)
-		<< "index::create create an empty index for "
-		<< c->name();
+		<< evt << " create an empty index for " << c->name();
 	}
 	else if (ind->getNRows() == c->partition()->nRows()) {
 	    // having built a valid index, write out its content
 	    try {
-		if (! isRead) 
+		if (! isRead) {
+                    ibis::horometer tm2;
+                    if (ibis::gVerbose > 2)
+                        tm2.start();
 		    ierr = ind->write(dfname);
-		else
+                    if (ierr >= 0 && ibis::gVerbose > 2) {
+                        tm2.stop();
+                        LOGGER(1) << evt << " writing the index took "
+                                  << tm2.realTime() << " sec";
+                    }
+                }
+		else {
 		    ierr = 0;
+                }
 		if (ierr < 0) {
 		    std::string idxname;
 		    ind->indexFileName(idxname, dfname);
 		    remove(idxname.c_str());
 		    LOGGER(ibis::gVerbose > 0)
-			<< "Warning -- index[" << c->partition()->name() << '.'
-			<< c->name() << "]::create failed to write the index ("
+			<< "Warning -- " << evt
+                        << " failed to write the index ("
 			<< ind->name() << ") to " << idxname << ", ierr = "
 			<< ierr;
 		}
@@ -336,16 +369,14 @@ ibis::index* ibis::index::create(const ibis::column* c, const char* dfname,
 		ind->indexFileName(idxname, dfname);
 		remove(idxname.c_str());
 		LOGGER(ibis::gVerbose > 0)
-		    << "Warning -- index[" << c->partition()->name()
-		    << '.' << c->name() << "]::create "
-		    "failed to write the index (" << ind->name()
+		    << "Warning -- " << evt
+                    << " failed to write the index (" << ind->name()
 		    << ") to " << idxname << ", received an exception";
 	    }
 	}
 	else {
 	    LOGGER(ibis::gVerbose > 0)
-		<< "index[" << c->partition()->name() << '.'
-		<< c->name() << "]::create created an index with "
+		<< evt << " created an index with "
 		<< ind->getNRows() << " row"
 		<< (ind->getNRows() > 1 ? "s" : "")
 		<< ", but the data partition has "
@@ -355,43 +386,40 @@ ibis::index* ibis::index::create(const ibis::column* c, const char* dfname,
     }
     catch (const char* s) {
 	LOGGER(ibis::gVerbose > 0)
-	    << "Warning -- index::create(" << c->name()
-	    << ") received a string exception -- " << s;
+	    << "Warning -- " << evt << " received a string exception -- " << s;
 	delete ind;
 	ind = 0;
     }
     catch (const ibis::bad_alloc& e) {
 	LOGGER(ibis::gVerbose > 0)
-	    << "Warning -- index::create(" << c->name()
-	    << ") failed to allocate memory -- " << e.what();
+	    << "Warning -- " << evt << " failed to allocate memory -- "
+            << e.what();
 	delete ind;
 	ind = 0;
     }
     catch (const std::exception& e) {
 	LOGGER(ibis::gVerbose > 0)
-	    << "Warning -- index::create(" << c->name()
-	    << ") received an std::exception -- " << e.what();
+	    << "Warning -- " << evt << " received an std::exception -- "
+            << e.what();
 	delete ind;
 	ind = 0;
     }
     catch (...) {
 	LOGGER(ibis::gVerbose > 0)
-	    << "Warning -- index::create(" << c->name()
-	    << ") received a unexpected exception";
+	    << "Warning -- " << evt << " received a unexpected exception";
 	delete ind;
 	ind = 0;
     }
 
     if (ind == 0) {
 	LOGGER(ibis::gVerbose >= 0)
-	    << "Warning -- index[" << c->partition()->name() << "." << c->name()
-	    << "]::create failed to create an index of type "
+	    << "Warning -- " << evt << " failed to create an index of type "
 	    << (spec != 0 && *spec != 0 ? spec : "default");
     }
     else if (ibis::gVerbose > 1) {
 	timer.stop();
 	ibis::util::logger lg;
-	lg() << "index::create -- the " << ind->name() << " index for column "
+	lg() << evt << " -- the " << ind->name() << " index for column "
 	     << c->partition()->name() << '.' << c->name();
 	if (isRead) {
 	    lg() << " was read from " << dfname;
